[gd_scene load_steps=8 format=3 uid="uid://b7ic3ox7ery5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_5fwna"]
[ext_resource type="Texture2D" uid="uid://cyam6m8m1j8k0" path="res://assets/gui/scorecard.png" id="1_k8klk"]
[ext_resource type="Theme" uid="uid://c87g1wfiyj8qq" path="res://tres/order_bubble.tres" id="2_n3si8"]
[ext_resource type="AudioStream" uid="uid://bhifjlimuxupj" path="res://assets/audio/page-flip-47177.mp3" id="4_6oo1i"]

[sub_resource type="Animation" id="Animation_8vtyx"]
resource_name = "menu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scorecard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 700), Vector2(0, -100), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scorecard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.174533, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scorecard:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.225, 1.225), Vector2(1, 1)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_6oo1i")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_w0jnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scorecard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scorecard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scorecard:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqwch"]
_data = {
"RESET": SubResource("Animation_w0jnj"),
"menu": SubResource("Animation_8vtyx")
}

[node name="pauseMenu" type="Node2D"]
script = ExtResource("1_5fwna")

[node name="Scorecard" type="Sprite2D" parent="."]
position = Vector2(0, 700)
texture = ExtResource("1_k8klk")

[node name="VBoxContainer" type="VBoxContainer" parent="Scorecard"]
offset_left = -171.0
offset_top = -122.0
offset_right = 169.0
offset_bottom = 135.0

[node name="resume" type="Button" parent="Scorecard/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n3si8")
theme_override_font_sizes/font_size = 56
text = "Resume"

[node name="restart" type="Button" parent="Scorecard/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n3si8")
theme_override_font_sizes/font_size = 56
text = "Restart"

[node name="menu" type="Button" parent="Scorecard/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n3si8")
theme_override_font_sizes/font_size = 56
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gqwch")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Scorecard/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Scorecard/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Scorecard/VBoxContainer/menu" to="." method="_on_menu_pressed"]
